texto sobre fotos

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta property='og:image' content='https://firebasestorage.googleapis.com/v0/b/etana-bs-as.appspot.com/o/preview.png?alt=media&token=eacea637-a32d-4128-913a-3f262b0d3884'/>
     <meta property="og:title" content="SERRANO 360°." />
-    <meta property="og:description" content="Fotografía 360°." />
+    <meta property="og:description" content="Fotografía de productos." />
     <meta name="theme-color" content="#ffffff">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
